fix: add seccomp=unconfined to Docker E2E for TigerBeetle io_uring
TigerBeetle requires io_uring syscalls which Docker's default seccomp
profile blocks. The local run-docker-test.sh already passes this flag
but the CI workflow was missing it.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2631,7 +2631,9 @@ jobs:
         run: docker build -t spindb-e2e -f tests/docker/Dockerfile .
 
       - name: Run Docker E2E tests
-        run: docker run --rm spindb-e2e
+        # --security-opt seccomp=unconfined: TigerBeetle requires io_uring syscalls
+        # which Docker's default seccomp profile blocks
+        run: docker run --rm --security-opt seccomp=unconfined spindb-e2e
         timeout-minutes: 30
 
   # ============================================
