--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: CI
 on:
   pull_request:
     branches: [main]
-  # push:
-  #   branches: [dev] # TODO: change to a feature branch and uncomment to test on feature branches
+  push:
+    branches: [dev]
   workflow_dispatch:
 
 # =============================================================================
@@ -2125,7 +2125,9 @@ jobs:
           - os: macos-14
             icon: 🍎
             label: macOS ARM64
-          # Windows excluded - PostgreSQL integration tests cover Windows lifecycle
+          - os: windows-latest
+            icon: 🪟
+            label: Win x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -2141,6 +2143,7 @@ jobs:
       # Ensure clean state - no existing ~/.spindb
       - name: Ensure clean state
         run: rm -rf ~/.spindb
+        shell: bash
 
       # Pack and install globally (simulates npm install -g spindb)
       - name: Install dependencies
@@ -2205,7 +2208,9 @@ jobs:
           - os: macos-14
             icon: 🍎
             label: macOS ARM64
-          # Windows excluded - PostgreSQL integration tests cover Windows lifecycle
+          - os: windows-latest
+            icon: 🪟
+            label: Win x64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -2221,6 +2226,7 @@ jobs:
       # Ensure clean state
       - name: Ensure clean state
         run: rm -rf ~/.spindb
+        shell: bash
 
       # Install current version
       - name: Install dependencies
