fix: use bash shell for global install step on Windows CI
PowerShell doesn't glob-expand `spindb-*.tgz`, causing npm to try opening
the literal path. Force bash shell so the wildcard resolves correctly.

--- a/.github/workflows/ci-full.yml
+++ b/.github/workflows/ci-full.yml
@@ -2146,6 +2146,7 @@ jobs:
 
       - name: Install globally
         run: npm install -g spindb-*.tgz
+        shell: bash
 
       # Test CLI is accessible
       - name: Verify spindb command exists
