--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2154,6 +2154,7 @@ jobs:
 
       - name: Install globally
         run: npm install -g spindb-*.tgz
+        shell: bash
 
       # Test CLI is accessible
       - name: Verify spindb command exists
