--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.38.1",
+  "version": "0.39.0",
   "author": "Bob Bass <bob@bbass.co>",
   "license": "PolyForm-Noncommercial-1.0.0",
   "description": "Zero-config Docker-free local database containers. Create, backup, and clone a variety of popular databases.",
@@ -34,7 +34,8 @@
     "generate:missing": "tsx scripts/generate/missing-databases.ts",
     "delete:demos": "tsx scripts/generate/delete-demos.ts",
     "format": "prettier --write .",
-    "lint": "tsc --noEmit && eslint .",
+    "check": "tsc --noEmit",
+    "lint": "eslint . && pnpm check",
     "prepare": "husky"
   },
   "keywords": [
